# quarto-cli

./: .air.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .luarc.json  .prettierignore  .prettierrc.json  .ruff.toml  AGENTS.md  CITATION.cff  CNAME  CONFİG  CONTRIBUTING.md  COPYING.md  COPYRIGHT  LICENSE  PARSING_RESEARCH.md  README.md  SECURITY.md  changelog.md  configuration  configure  configure-linux.sh  configure-macos.sh  configure-sandbox.sh  configure-windows.cmd  configure.cmd  configure.sh  deno.json  deno.jsonc  matplotlib.ipynb  matplotlib.md  plan.md  quarto-cli.code-workspace  quarto-cmd.lnk  ruff.toml  setup.py  version.txt  win_configuration.bat
package/typst-gather/: Cargo.toml  README.md  example-packages.toml
tests/: .gitignore  .renvignore  CLAUDE.md  DESCRIPTION  Manifest.toml  Pipfile  Project.toml  README.md  callouts.aux  configure-test-env.ps1  configure-test-env.sh  configure-test.ps1  configure-test.sh  environment.test.ts  gha-grouping.ts  git-bisect-test.sh  github-actions.ts  new-smoke-all-test.ps1  new-smoke-all-test.sh  puppeteer.ts  pyproject.toml  quarto-cmd.ts  render-jupyter.test.ts  render-observable.test.ts  render-pdf.test.ts  render-plain.test.ts  render-r.test.ts  render.test.ts  render.ts  requirements.txt  resources.test.ts  run-fast-tests.ps1  run-fast-tests.sh  run-parallel-tests.sh  run-parallel-tests.ts  run-test.ps1  run-tests-multiple-file-args.test.sh  run-tests-recursive-glob.test.sh  run-tests-with-luacov.sh  run-tests.ps1  (+12 more)
tests/docs/: Syntax Test.qmd  callouts.qmd  callouts.tex  empty-frontmatter.qmd  (+26 more)
(+6513 files in other folders)
